# dgl_batchbox

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/graph_op/: edge.py
src/normalization/: pair_norm.py
src/pooling/: sagpool.py
src/utils/: graph  tensor.py
test/: test_graph_op.py  test_norm.py  test_pooling.py
