[build-system]
requires = ["setuptools>=61.0", "dgl>=0.6.0",  "torch>=1.13.1"]
build-backend = "setuptools.build_meta"

[project]
name = "dgl_batchbox"
version = "0.0.1"
authors = [
  { name="Ramin Nakhli", email="raminnakhli@gmail.com" },
]
description = "A package containing common graph operations for DGL in a batch-wise manner"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/raminnakhli/dgl_batchbox"
"Bug Tracker" = "https://github.com/raminnakhli/dgl_batchbox/issues"